issue #355 fixed
Fixed issue: #355 

Fixed the navbar misalignment.

--- a/src/components/navigation/mainNavMenu/navigation.scss
+++ b/src/components/navigation/mainNavMenu/navigation.scss
@@ -86,9 +86,9 @@ nav {
 				font-size: 1.5em;
 			}
 
-			.nav-link {
-				line-height: 1.8;
-			}
+// 			.nav-link {
+// 				line-height: 1.8;
+// 			}
 
 			.nav-dropdown {
 				position: relative;
